fix "raw types" and "unchecked cast" compiler warnings so far possible